analizadores/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    AS
    ASSERT
    ASYNC
    AWAIT
    BREAK
    CASE
    CATCH
    CLASS
    CONTINUE
    COVARIANT
    DEFAULT
    DEFERRED
    DO
    DOLLARSIGN
    DOUBLE_COLON
    ENUM
    EXPORT
    EXTENDS
    EXTENSION
    EXTERNAL
    FACTORY
    FINALLY
    FUNCTION
    GET
    HIDE
    IMPLEMENTS
    IMPORT
    INTERFACE
    IS
    LATE
    LIBRARY
    MIXIN
    MODULE
    NEW
    NULL
    NUM
    NUMERAL
    OBJECT
    ON
    OPERATOR
    PART
    RETHROW
    RETURN
    SET
    SHOW
    STATIC
    SUPER
    SWITCH
    SYNC
    THROW
    TRY
    TYPEDEF
    WITH
    YIELD

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     statement -> print
Rule 5     statement -> data_input
Rule 6     statement -> set
Rule 7     statement -> map
Rule 8     statement -> constructor
Rule 9     statement -> control_structures
Rule 10    statement -> function
Rule 11    statement -> list_definition
Rule 12    statement -> variable_definition
Rule 13    statement -> variable_usage
Rule 14    statement -> call_function
Rule 15    statement -> SEMICOLON
Rule 16    control_structures -> control_structures_if_else
Rule 17    control_structures -> control_structures_for
Rule 18    control_structures -> control_structures_while
Rule 19    variable_usage -> ID
Rule 20    call_function -> ID LPAREN argument_list RPAREN
Rule 21    call_function -> ID LPAREN RPAREN
Rule 22    data_input -> STRING ID ASSIGN STDIN DOT READLINESYNC LPAREN RPAREN SEMICOLON
Rule 23    data_input -> STRING QUESTION ID ASSIGN STDIN DOT READLINESYNC LPAREN RPAREN SEMICOLON
Rule 24    length -> call_list DOT LENGTH
Rule 25    length -> TEXT DOT LENGTH
Rule 26    argument_list -> expression
Rule 27    argument_list -> argument_list COMMA expression
Rule 28    function -> type ID LPAREN parameter_list RPAREN LBRACKET statement_list RBRACKET
Rule 29    function -> VOID ID LPAREN parameter_list RPAREN LBRACKET statement_list RBRACKET
Rule 30    function -> type ID LPAREN RPAREN LBRACKET statement_list RBRACKET
Rule 31    function -> VOID ID LPAREN RPAREN LBRACKET statement_list RBRACKET
Rule 32    function -> VOID ID LPAREN RPAREN LBRACKET RBRACKET
Rule 33    function -> VOID ID LPAREN parameter_list RPAREN LBRACKET RBRACKET
Rule 34    variable_definition -> type ID ASSIGN expression SEMICOLON
Rule 35    variable_definition -> DYNAMIC ID ASSIGN expression SEMICOLON
Rule 36    variable_definition -> VAR ID ASSIGN expression SEMICOLON
Rule 37    variable_definition -> INT ID ASSIGN length SEMICOLON
Rule 38    variable_definition -> INT ID ASSIGN NUMBER SEMICOLON
Rule 39    variable_definition -> DOUBLE ID ASSIGN NDOUBLE SEMICOLON
Rule 40    variable_definition -> DOUBLE ID ASSIGN simple_operations_arithmetics SEMICOLON
Rule 41    print -> PRINT LPAREN RPAREN SEMICOLON
Rule 42    print -> PRINT LPAREN simple_operations_arithmetics RPAREN SEMICOLON
Rule 43    print -> PRINT LPAREN value RPAREN SEMICOLON
Rule 44    print -> PRINT LPAREN expression RPAREN SEMICOLON
Rule 45    print -> PRINT LPAREN length RPAREN SEMICOLON
Rule 46    list_numbers -> NUMBER
Rule 47    list_numbers -> NDOUBLE
Rule 48    simple_operators_arithmetics -> MINUS
Rule 49    simple_operators_arithmetics -> PLUS
Rule 50    simple_operators_arithmetics -> DIVIDE
Rule 51    simple_operators_arithmetics -> TIMES
Rule 52    simple_operations_arithmetics -> list_numbers simple_operators_arithmetics list_numbers
Rule 53    simple_operations_arithmetics -> list_numbers simple_operators_arithmetics list_numbers simple_operators_arithmetics simple_operations_arithmetics
Rule 54    expression -> expression PLUS expression
Rule 55    expression -> expression MINUS expression
Rule 56    expression -> expression TIMES expression
Rule 57    expression -> expression DIVIDE expression
Rule 58    expression -> expression AND expression
Rule 59    expression -> expression OR expression
Rule 60    expression -> value comparator value
Rule 61    expression -> value PLUS value
Rule 62    expression -> value
Rule 63    control_structures_if_else -> if_block
Rule 64    control_structures_if_else -> if_block else_if_blocks
Rule 65    control_structures_if_else -> if_block else_if_blocks else_block
Rule 66    control_structures_if_else -> if_block else_block
Rule 67    if_block -> IF LPAREN conditions RPAREN LBRACKET statement_list RBRACKET
Rule 68    else_if_blocks -> ELSE IF LPAREN conditions RPAREN LBRACKET statement_list RBRACKET
Rule 69    else_if_blocks -> else_if_blocks ELSE IF LPAREN conditions RPAREN LBRACKET statement_list RBRACKET
Rule 70    else_block -> ELSE LBRACKET statement_list RBRACKET
Rule 71    conditions -> condition
Rule 72    conditions -> conditions AND conditions
Rule 73    conditions -> conditions OR conditions
Rule 74    condition -> value comparator value
Rule 75    condition -> NOT condition
Rule 76    condition -> LPAREN conditions RPAREN
Rule 77    comparator -> GREATER
Rule 78    comparator -> LESS
Rule 79    comparator -> EQUALS
Rule 80    comparator -> GREATER_EQUAL
Rule 81    comparator -> LESS_EQUAL
Rule 82    comparator -> NOT_EQUALS
Rule 83    parameter_list -> parameter
Rule 84    parameter_list -> parameter_list COMMA parameter
Rule 85    parameter -> type ID
Rule 86    parameter -> REQUIRED type ID
Rule 87    type -> INT
Rule 88    type -> DOUBLE
Rule 89    type -> STRING
Rule 90    type -> BOOL
Rule 91    type -> LIST
Rule 92    call_list -> LSBRACKET value_list RSBRACKET
Rule 93    list_definition -> LIST LESS type GREATER ID ASSIGN LSBRACKET value_list RSBRACKET SEMICOLON
Rule 94    value_list -> value
Rule 95    value_list -> value_list COMMA value
Rule 96    value -> NUMBER
Rule 97    value -> NDOUBLE
Rule 98    value -> TEXT
Rule 99    value -> ID
Rule 100   value -> interpolated_string
Rule 101   value -> TRUE
Rule 102   value -> FALSE
Rule 103   interpolated_string -> TEXT PLUS ID
Rule 104   interpolated_string -> TEXT PLUS expression
Rule 105   set -> VAR ID ASSIGN LBRACKET value_list RBRACKET SEMICOLON
Rule 106   set -> VAR ID ASSIGN LESS STRING GREATER LBRACKET RBRACKET SEMICOLON
Rule 107   set -> FINAL ID ASSIGN CONST LBRACKET value_list RBRACKET SEMICOLON
Rule 108   for_classic_initialization -> INT ID ASSIGN NUMBER
Rule 109   for_classic_initialization -> DOUBLE ID ASSIGN NDOUBLE
Rule 110   for_classic_conditions -> conditions
Rule 111   for_classic_changes -> ID comparator value
Rule 112   for_classic_changes -> ID INCREMENT
Rule 113   for_classic_changes -> ID DECREMENT
Rule 114   for_classic_changes -> ID comparator value COMMA for_classic_changes
Rule 115   for_classic_parenthesis_content -> for_classic_initialization SEMICOLON for_classic_conditions SEMICOLON for_classic_changes
Rule 116   for_classic -> FOR LPAREN for_classic_parenthesis_content RPAREN LBRACKET statement_list RBRACKET
Rule 117   for_in_parenthesis_content -> FINAL ID IN ID
Rule 118   for_in -> FOR LPAREN for_in_parenthesis_content RPAREN LBRACKET statement_list RBRACKET
Rule 119   for_each_parenthesis_parenthesis_content -> COLON ID
Rule 120   for_each_parenthesis_parenthesis_content -> COLON ID COMMA for_each_parenthesis_parenthesis_content
Rule 121   for_each_parenthesis_content -> FINAL ID LPAREN for_each_parenthesis_parenthesis_content RPAREN IN ID
Rule 122   for_each -> FOR LPAREN for_each_parenthesis_content RPAREN LBRACKET statement_list RBRACKET
Rule 123   control_structures_for -> for_classic
Rule 124   control_structures_for -> for_in
Rule 125   control_structures_for -> for_each
Rule 126   constructor_parenthesis_content -> THIS DOT ID
Rule 127   constructor_parenthesis_content -> THIS DOT ID COMMA constructor_parenthesis_content
Rule 128   constructor -> ID LPAREN constructor_parenthesis_content RPAREN SEMICOLON
Rule 129   function -> type ID LPAREN parameter_list RPAREN ASSIGN GREATER expression
Rule 130   control_structures_while -> WHILE LPAREN conditions LBRACKET statement_list RBRACKET
Rule 131   map -> map_declaration map_assignment
Rule 132   map_declaration -> MAP LESS key_type COMMA type GREATER ID ASSIGN
Rule 133   map_assignment -> LBRACKET map_contents RBRACKET
Rule 134   map_contents -> map_content
Rule 135   map_contents -> map_content COMMA map_contents
Rule 136   map_content -> key_value COLON value
Rule 137   key_value -> TEXT
Rule 138   key_type -> STRING

Terminals, with rules where they appear

ABSTRACT             : 
AND                  : 58 72
AS                   : 
ASSERT               : 
ASSIGN               : 22 23 34 35 36 37 38 39 40 93 105 106 107 108 109 129 132
ASYNC                : 
AWAIT                : 
BOOL                 : 90
BREAK                : 
CASE                 : 
CATCH                : 
CLASS                : 
COLON                : 119 120 136
COMMA                : 27 84 95 114 120 127 132 135
CONST                : 107
CONTINUE             : 
COVARIANT            : 
DECREMENT            : 113
DEFAULT              : 
DEFERRED             : 
DIVIDE               : 50 57
DO                   : 
DOLLARSIGN           : 
DOT                  : 22 23 24 25 126 127
DOUBLE               : 39 40 88 109
DOUBLE_COLON         : 
DYNAMIC              : 35
ELSE                 : 68 69 70
ENUM                 : 
EQUALS               : 79
EXPORT               : 
EXTENDS              : 
EXTENSION            : 
EXTERNAL             : 
FACTORY              : 
FALSE                : 102
FINAL                : 107 117 121
FINALLY              : 
FOR                  : 116 118 122
FUNCTION             : 
GET                  : 
GREATER              : 77 93 106 129 132
GREATER_EQUAL        : 80
HIDE                 : 
ID                   : 19 20 21 22 23 28 29 30 31 32 33 34 35 36 37 38 39 40 85 86 93 99 103 105 106 107 108 109 111 112 113 114 117 117 119 120 121 121 126 127 128 129 132
IF                   : 67 68 69
IMPLEMENTS           : 
IMPORT               : 
IN                   : 117 121
INCREMENT            : 112
INT                  : 37 38 87 108
INTERFACE            : 
IS                   : 
LATE                 : 
LBRACKET             : 28 29 30 31 32 33 67 68 69 70 105 106 107 116 118 122 130 133
LENGTH               : 24 25
LESS                 : 78 93 106 132
LESS_EQUAL           : 81
LIBRARY              : 
LIST                 : 91 93
LPAREN               : 20 21 22 23 28 29 30 31 32 33 41 42 43 44 45 67 68 69 76 116 118 121 122 128 129 130
LSBRACKET            : 92 93
MAP                  : 132
MINUS                : 48 55
MIXIN                : 
MODULE               : 
NDOUBLE              : 39 47 97 109
NEW                  : 
NOT                  : 75
NOT_EQUALS           : 82
NULL                 : 
NUM                  : 
NUMBER               : 38 46 96 108
NUMERAL              : 
OBJECT               : 
ON                   : 
OPERATOR             : 
OR                   : 59 73
PART                 : 
PLUS                 : 49 54 61 103 104
PRINT                : 41 42 43 44 45
QUESTION             : 23
RBRACKET             : 28 29 30 31 32 33 67 68 69 70 105 106 107 116 118 122 130 133
READLINESYNC         : 22 23
REQUIRED             : 86
RETHROW              : 
RETURN               : 
RPAREN               : 20 21 22 23 28 29 30 31 32 33 41 42 43 44 45 67 68 69 76 116 118 121 122 128 129
RSBRACKET            : 92 93
SEMICOLON            : 15 22 23 34 35 36 37 38 39 40 41 42 43 44 45 93 105 106 107 115 115 128
SET                  : 
SHOW                 : 
STATIC               : 
STDIN                : 22 23
STRING               : 22 23 89 106 138
SUPER                : 
SWITCH               : 
SYNC                 : 
TEXT                 : 25 98 103 104 137
THIS                 : 126 127
THROW                : 
TIMES                : 51 56
TRUE                 : 101
TRY                  : 
TYPEDEF              : 
VAR                  : 36 105 106
VOID                 : 29 31 32 33
WHILE                : 130
WITH                 : 
YIELD                : 
error                : 

Nonterminals, with rules where they appear

argument_list        : 20 27
call_function        : 14
call_list            : 24
comparator           : 60 74 111 114
condition            : 71 75
conditions           : 67 68 69 72 72 73 73 76 110 130
constructor          : 8
constructor_parenthesis_content : 127 128
control_structures   : 9
control_structures_for : 17
control_structures_if_else : 16
control_structures_while : 18
data_input           : 5
else_block           : 65 66
else_if_blocks       : 64 65 69
expression           : 26 27 34 35 36 44 54 54 55 55 56 56 57 57 58 58 59 59 104 129
for_classic          : 123
for_classic_changes  : 114 115
for_classic_conditions : 115
for_classic_initialization : 115
for_classic_parenthesis_content : 116
for_each             : 125
for_each_parenthesis_content : 122
for_each_parenthesis_parenthesis_content : 120 121
for_in               : 124
for_in_parenthesis_content : 118
function             : 10
if_block             : 63 64 65 66
interpolated_string  : 100
key_type             : 132
key_value            : 136
length               : 37 45
list_definition      : 11
list_numbers         : 52 52 53 53
map                  : 7
map_assignment       : 131
map_content          : 134 135
map_contents         : 133 135
map_declaration      : 131
parameter            : 83 84
parameter_list       : 28 29 33 84 129
print                : 4
program              : 0
set                  : 6
simple_operations_arithmetics : 40 42 53
simple_operators_arithmetics : 52 53 53
statement            : 2 3
statement_list       : 1 3 28 29 30 31 67 68 69 70 116 118 122 130
type                 : 28 30 34 85 86 93 129 132
value                : 43 60 60 61 61 62 74 74 94 95 111 114 136
value_list           : 92 93 95 105 107
variable_definition  : 12
variable_usage       : 13

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . print
    (5) statement -> . data_input
    (6) statement -> . set
    (7) statement -> . map
    (8) statement -> . constructor
    (9) statement -> . control_structures
    (10) statement -> . function
    (11) statement -> . list_definition
    (12) statement -> . variable_definition
    (13) statement -> . variable_usage
    (14) statement -> . call_function
    (15) statement -> . SEMICOLON
    (41) print -> . PRINT LPAREN RPAREN SEMICOLON
    (42) print -> . PRINT LPAREN simple_operations_arithmetics RPAREN SEMICOLON
    (43) print -> . PRINT LPAREN value RPAREN SEMICOLON
    (44) print -> . PRINT LPAREN expression RPAREN SEMICOLON
    (45) print -> . PRINT LPAREN length RPAREN SEMICOLON
    (22) data_input -> . STRING ID ASSIGN STDIN DOT READLINESYNC LPAREN RPAREN SEMICOLON
    (23) data_input -> . STRING QUESTION ID ASSIGN STDIN DOT READLINESYNC LPAREN RPAREN SEMICOLON
    (105) set -> . VAR ID ASSIGN LBRACKET value_list RBRACKET SEMICOLON
    (106) set -> . VAR ID ASSIGN LESS STRING GREATER LBRACKET RBRACKET SEMICOLON
    (107) set -> . FINAL ID ASSIGN CONST LBRACKET value_list RBRACKET SEMICOLON
    (131) map -> . map_declaration map_assignment
    (128) constructor -> . ID LPAREN constructor_parenthesis_content RPAREN SEMICOLON
    (16) control_structures -> . control_structures_if_else
    (17) control_structures -> . control_structures_for
    (18) control_structures -> . control_structures_while
    (28) function -> . type ID LPAREN parameter_list RPAREN LBRACKET statement_list RBRACKET
    (29) function -> . VOID ID LPAREN parameter_list RPAREN LBRACKET statement_list RBRACKET
    (30) function -> . type ID LPAREN RPAREN LBRACKET statement_list RBRACKET
    (31) function -> . VOID ID LPAREN RPAREN LBRACKET statement_list RBRACKET
    (32) function -> . VOID ID LPAREN RPAREN LBRACKET RBRACKET
    (33) function -> . VOID ID LPAREN parameter_list RPAREN LBRACKET RBRACKET
    (129) function -> . type ID LPAREN parameter_list RPAREN ASSIGN GREATER expression
    (93) list_definition -> . LIST LESS type GREATER ID ASSIGN LSBRACKET value_list RSBRACKET SEMICOLON
    (34) variable_definition -> . type ID ASSIGN expression SEMICOLON
    (35) variable_definition -> . DYNAMIC ID ASSIGN expression SEMICOLON
    (36) variable_definition -> . VAR ID ASSIGN expression SEMICOLON
    (37) variable_definition -> . INT ID ASSIGN length SEMICOLON
    (38) variable_definition -> . INT ID ASSIGN NUMBER SEMICOLON
    (39) variable_definition -> . DOUBLE ID ASSIGN NDOUBLE SEMICOLON
    (40) variable_definition -> . DOUBLE ID ASSIGN simple_operations_arithmetics SEMICOLON
    (19) variable_usage -> . ID
    (20) call_function -> . ID LPAREN argument_list RPAREN
    (21) call_function -> . ID LPAREN RPAREN
    (132) map_declaration -> . MAP LESS key_type COMMA type GREATER ID ASSIGN
    (63) control_structures_if_else -> . if_block
    (64) control_structures_if_else -> . if_block else_if_blocks
    (65) control_structures_if_else -> . if_block else_if_blocks else_block
    (66) control_structures_if_else -> . if_block else_block
    (123) control_structures_for -> . for_classic
    (124) control_structures_for -> . for_in
    (125) control_structures_for -> . for_each
    (130) control_structures_while -> . WHILE LPAREN conditions LBRACKET statement_list RBRACKET
    (87) type -> . INT
    (88) type -> . DOUBLE
    (89) type -> . STRING
    (90) type -> . BOOL
    (91) type -> . LIST
    (67) if_block -> . IF LPAREN conditions RPAREN LBRACKET statement_list RBRACKET
    (116) for_classic -> . FOR LPAREN for_classic_parenthesis_content RPAREN LBRACKET statement_list RBRACKET
    (118) for_in -> . FOR LPAREN for_in_parenthesis_content RPAREN LBRACKET statement_list RBRACKET
    (122) for_each -> . FOR LPAREN for_each_parenthesis_content RPAREN LBRACKET statement_list RBRACKET

    SEMICOLON       shift and go to state 15
    PRINT           shift and go to state 16
    STRING          shift and go to state 17
    VAR             shift and go to state 19
    FINAL           shift and go to state 20
    ID              shift and go to state 18
    VOID            shift and go to state 26
    LIST            shift and go to state 27
    DYNAMIC         shift and go to state 28
    INT             shift and go to state 29
    DOUBLE          shift and go to state 30
    MAP             shift and go to state 31
    WHILE           shift and go to state 36
    BOOL            shift and go to state 37
    IF              shift and go to state 38
    FOR             shift and go to state 39

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    print                          shift and go to state 4
    data_input                     shift and go to state 5
    set                            shift and go to state 6
    map                            shift and go to state 7
    constructor                    shift and go to state 8
    control_structures             shift and go to state 9
    function                       shift and go to state 10
    list_definition                shift and go to state 11
    variable_definition            shift and go to state 12
    variable_usage                 shift and go to state 13
    call_function                  shift and go to state 14
    map_declaration                shift and go to state 21
    control_structures_if_else     shift and go to state 22
    control_structures_for         shift and go to state 23
    control_structures_while       shift and go to state 24
    type                           shift and go to state 25
    if_block                       shift and go to state 32
    for_classic                    shift and go to state 33
    for_in                         shift and go to state 34
    for_each                       shift and go to state 35

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (3) statement_list -> statement_list . statement
    (4) statement -> . print
    (5) statement -> . data_input
    (6) statement -> . set
    (7) statement -> . map
    (8) statement -> . constructor
    (9) statement -> . control_structures
    (10) statement -> . function
    (11) statement -> . list_definition
    (12) statement -> . variable_definition
    (13) statement -> . variable_usage
    (14) statement -> . call_function
    (15) statement -> . SEMICOLON
    (41) print -> . PRINT LPAREN RPAREN SEMICOLON
    (42) print -> . PRINT LPAREN simple_operations_arithmetics RPAREN SEMICOLON
    (43) print -> . PRINT LPAREN value RPAREN SEMICOLON
    (44) print -> . PRINT LPAREN expression RPAREN SEMICOLON
    (45) print -> . PRINT LPAREN length RPAREN SEMICOLON
    (22) data_input -> . STRING ID ASSIGN STDIN DOT READLINESYNC LPAREN RPAREN SEMICOLON
    (23) data_input -> . STRING QUESTION ID ASSIGN STDIN DOT READLINESYNC LPAREN RPAREN SEMICOLON
    (105) set -> . VAR ID ASSIGN LBRACKET value_list RBRACKET SEMICOLON
    (106) set -> . VAR ID ASSIGN LESS STRING GREATER LBRACKET RBRACKET SEMICOLON
    (107) set -> . FINAL ID ASSIGN CONST LBRACKET value_list RBRACKET SEMICOLON
    (131) map -> . map_declaration map_assignment
    (128) constructor -> . ID LPAREN constructor_parenthesis_content RPAREN SEMICOLON
    (16) control_structures -> . control_structures_if_else
    (17) control_structures -> . control_structures_for
    (18) control_structures -> . control_structures_while
    (28) function -> . type ID LPAREN parameter_list RPAREN LBRACKET statement_list RBRACKET
    (29) function -> . VOID ID LPAREN parameter_list RPAREN LBRACKET statement_list RBRACKET
    (30) function -> . type ID LPAREN RPAREN LBRACKET statement_list RBRACKET
    (31) function -> . VOID ID LPAREN RPAREN LBRACKET statement_list RBRACKET
    (32) function -> . VOID ID LPAREN RPAREN LBRACKET RBRACKET
    (33) function -> . VOID ID LPAREN parameter_list RPAREN LBRACKET RBRACKET
    (129) function -> . type ID LPAREN parameter_list RPAREN ASSIGN GREATER expression
    (93) list_definition -> . LIST LESS type GREATER ID ASSIGN LSBRACKET value_list RSBRACKET SEMICOLON
    (34) variable_definition -> . type ID ASSIGN expression SEMICOLON
    (35) variable_definition -> . DYNAMIC ID ASSIGN expression SEMICOLON
    (36) variable_definition -> . VAR ID ASSIGN expression SEMICOLON
    (37) variable_definition -> . INT ID ASSIGN length SEMICOLON
    (38) variable_definition -> . INT ID ASSIGN NUMBER SEMICOLON
    (39) variable_definition -> . DOUBLE ID ASSIGN NDOUBLE SEMICOLON
    (40) variable_definition -> . DOUBLE ID ASSIGN simple_operations_arithmetics SEMICOLON
    (19) variable_usage -> . ID
    (20) call_function -> . ID LPAREN argument_list RPAREN
    (21) call_function -> . ID LPAREN RPAREN
    (132) map_declaration -> . MAP LESS key_type COMMA type GREATER ID ASSIGN
    (63) control_structures_if_else -> . if_block
    (64) control_structures_if_else -> . if_block else_if_blocks
    (65) control_structures_if_else -> . if_block else_if_blocks else_block
    (66) control_structures_if_else -> . if_block else_block
    (123) control_structures_for -> . for_classic
    (124) control_structures_for -> . for_in
    (125) control_structures_for -> . for_each
    (130) control_structures_while -> . WHILE LPAREN conditions LBRACKET statement_list RBRACKET
    (87) type -> . INT
    (88) type -> . DOUBLE
    (89) type -> . STRING
    (90) type -> . BOOL
    (91) type -> . LIST
    (67) if_block -> . IF LPAREN conditions RPAREN LBRACKET statement_list RBRACKET
    (116) for_classic -> . FOR LPAREN for_classic_parenthesis_content RPAREN LBRACKET statement_list RBRACKET
    (118) for_in -> . FOR LPAREN for_in_parenthesis_content RPAREN LBRACKET statement_list RBRACKET
    (122) for_each -> . FOR LPAREN for_each_parenthesis_content RPAREN LBRACKET statement_list RBRACKET

    $end            reduce using rule 1 (program -> statement_list .)
    SEMICOLON       shift and go to state 15
    PRINT           shift and go to state 16
    STRING          shift and go to state 17
    VAR             shift and go to state 19
    FINAL           shift and go to state 20
    ID              shift and go to state 18
    VOID            shift and go to state 26
    LIST            shift and go to state 27
    DYNAMIC         shift and go to state 28
    INT             shift and go to state 29
    DOUBLE          shift and go to state 30
    MAP             shift and go to state 31
    WHILE           shift and go to state 36
    BOOL            shift and go to state 37
    IF              shift and go to state 38
    FOR             shift and go to state 39

    statement                      shift and go to state 40
    print                          shift and go to state 4
    data_input                     shift and go to state 5
    set                            shift and go to state 6
    map                            shift and go to state 7
    constructor                    shift and go to state 8
    control_structures             shift and go to state 9
    function                       shift and go to state 10
    list_definition                shift and go to state 11
    variable_definition            shift and go to state 12
    variable_usage                 shift and go to state 13
    call_function                  shift and go to state 14
    map_declaration                shift and go to state 21
    control_structures_if_else     shift and go to state 22
    control_structures_for         shift and go to state 23
    control_structures_while       shift and go to state 24
    type                           shift and go to state 25
    if_block                       shift and go to state 32
    for_classic                    shift and go to state 33
    for_in                         shift and go to state 34
    for_each                       shift and go to state 35

state 3

    (2) statement_list -> statement .

    SEMICOLON       reduce using rule 2 (statement_list -> statement .)
    PRINT           reduce using rule 2 (statement_list -> statement .)
    STRING          reduce using rule 2 (statement_list -> statement .)
    VAR             reduce using rule 2 (statement_list -> statement .)
    FINAL           reduce using rule 2 (statement_list -> statement .)
    ID              reduce using rule 2 (statement_list -> statement .)
    VOID            reduce using rule 2 (statement_list -> statement .)
    LIST            reduce using rule 2 (statement_list -> statement .)
    DYNAMIC         reduce using rule 2 (statement_list -> statement .)
    INT             reduce using rule 2 (statement_list -> statement .)
    DOUBLE          reduce using rule 2 (statement_list -> statement .)
    MAP             reduce using rule 2 (statement_list -> statement .)
    WHILE           reduce using rule 2 (statement_list -> statement .)
    BOOL            reduce using rule 2 (statement_list -> statement .)
    IF              reduce using rule 2 (statement_list -> statement .)
    FOR             reduce using rule 2 (statement_list -> statement .)
    $end            reduce using rule 2 (statement_list -> statement .)
    RBRACKET        reduce using rule 2 (statement_list -> statement .)


state 4

    (4) statement -> print .

    SEMICOLON       reduce using rule 4 (statement -> print .)
    PRINT           reduce using rule 4 (statement -> print .)
    STRING          reduce using rule 4 (statement -> print .)
    VAR             reduce using rule 4 (statement -> print .)
    FINAL           reduce using rule 4 (statement -> print .)
    ID              reduce using rule 4 (statement -> print .)
    VOID            reduce using rule 4 (statement -> print .)
    LIST            reduce using rule 4 (statement -> print .)
    DYNAMIC         reduce using rule 4 (statement -> print .)
    INT             reduce using rule 4 (statement -> print .)
    DOUBLE          reduce using rule 4 (statement -> print .)
    MAP             reduce using rule 4 (statement -> print .)
    WHILE           reduce using rule 4 (statement -> print .)
    BOOL            reduce using rule 4 (statement -> print .)
    IF              reduce using rule 4 (statement -> print .)
    FOR             reduce using rule 4 (statement -> print .)
    $end            reduce using rule 4 (statement -> print .)
    RBRACKET        reduce using rule 4 (statement -> print .)


state 5

    (5) statement -> data_input .

    SEMICOLON       reduce using rule 5 (statement -> data_input .)
    PRINT           reduce using rule 5 (statement -> data_input .)
    STRING          reduce using rule 5 (statement -> data_input .)
    VAR             reduce using rule 5 (statement -> data_input .)
    FINAL           reduce using rule 5 (statement -> data_input .)
    ID              reduce using rule 5 (statement -> data_input .)
    VOID            reduce using rule 5 (statement -> data_input .)
    LIST            reduce using rule 5 (statement -> data_input .)
    DYNAMIC         reduce using rule 5 (statement -> data_input .)
    INT             reduce using rule 5 (statement -> data_input .)
    DOUBLE          reduce using rule 5 (statement -> data_input .)
    MAP             reduce using rule 5 (statement -> data_input .)
    WHILE           reduce using rule 5 (statement -> data_input .)
    BOOL            reduce using rule 5 (statement -> data_input .)
    IF              reduce using rule 5 (statement -> data_input .)
    FOR             reduce using rule 5 (statement -> data_input .)
    $end            reduce using rule 5 (statement -> data_input .)
    RBRACKET        reduce using rule 5 (statement -> data_input .)


state 6

    (6) statement -> set .

    SEMICOLON       reduce using rule 6 (statement -> set .)
    PRINT           reduce using rule 6 (statement -> set .)
    STRING          reduce using rule 6 (statement -> set .)
    VAR             reduce using rule 6 (statement -> set .)
    FINAL           reduce using rule 6 (statement -> set .)
    ID              reduce using rule 6 (statement -> set .)
    VOID            reduce using rule 6 (statement -> set .)
    LIST            reduce using rule 6 (statement -> set .)
    DYNAMIC         reduce using rule 6 (statement -> set .)
    INT             reduce using rule 6 (statement -> set .)
    DOUBLE          reduce using rule 6 (statement -> set .)
    MAP             reduce using rule 6 (statement -> set .)
    WHILE           reduce using rule 6 (statement -> set .)
    BOOL            reduce using rule 6 (statement -> set .)
    IF              reduce using rule 6 (statement -> set .)
    FOR             reduce using rule 6 (statement -> set .)
    $end            reduce using rule 6 (statement -> set .)
    RBRACKET        reduce using rule 6 (statement -> set .)


state 7

    (7) statement -> map .

    SEMICOLON       reduce using rule 7 (statement -> map .)
    PRINT           reduce using rule 7 (statement -> map .)
    STRING          reduce using rule 7 (statement -> map .)
    VAR             reduce using rule 7 (statement -> map .)
    FINAL           reduce using rule 7 (statement -> map .)
    ID              reduce using rule 7 (statement -> map .)
    VOID            reduce using rule 7 (statement -> map .)
    LIST            reduce using rule 7 (statement -> map .)
    DYNAMIC         reduce using rule 7 (statement -> map .)
    INT             reduce using rule 7 (statement -> map .)
    DOUBLE          reduce using rule 7 (statement -> map .)
    MAP             reduce using rule 7 (statement -> map .)
    WHILE           reduce using rule 7 (statement -> map .)
    BOOL            reduce using rule 7 (statement -> map .)
    IF              reduce using rule 7 (statement -> map .)
    FOR             reduce using rule 7 (statement -> map .)
    $end            reduce using rule 7 (statement -> map .)
    RBRACKET        reduce using rule 7 (statement -> map .)


state 8

    (8) statement -> constructor .

    SEMICOLON       reduce using rule 8 (statement -> constructor .)
    PRINT           reduce using rule 8 (statement -> constructor .)
    STRING          reduce using rule 8 (statement -> constructor .)
    VAR             reduce using rule 8 (statement -> constructor .)
    FINAL           reduce using rule 8 (statement -> constructor .)
    ID              reduce using rule 8 (statement -> constructor .)
    VOID            reduce using rule 8 (statement -> constructor .)
    LIST            reduce using rule 8 (statement -> constructor .)
    DYNAMIC         reduce using rule 8 (statement -> constructor .)
    INT             reduce using rule 8 (statement -> constructor .)
    DOUBLE          reduce using rule 8 (statement -> constructor .)
    MAP             reduce using rule 8 (statement -> constructor .)
    WHILE           reduce using rule 8 (statement -> constructor .)
    BOOL            reduce using rule 8 (statement -> constructor .)
    IF              reduce using rule 8 (statement -> constructor .)
    FOR             reduce using rule 8 (statement -> constructor .)
    $end            reduce using rule 8 (statement -> constructor .)
    RBRACKET        reduce using rule 8 (statement -> constructor .)


state 9

    (9) statement -> control_structures .

    SEMICOLON       reduce using rule 9 (statement -> control_structures .)
    PRINT           reduce using rule 9 (statement -> control_structures .)
    STRING          reduce using rule 9 (statement -> control_structures .)
    VAR             reduce using rule 9 (statement -> control_structures .)
    FINAL           reduce using rule 9 (statement -> control_structures .)
    ID              reduce using rule 9 (statement -> control_structures .)
    VOID            reduce using rule 9 (statement -> control_structures .)
    LIST            reduce using rule 9 (statement -> control_structures .)
    DYNAMIC         reduce using rule 9 (statement -> control_structures .)
    INT             reduce using rule 9 (statement -> control_structures .)
    DOUBLE          reduce using rule 9 (statement -> control_structures .)
    MAP             reduce using rule 9 (statement -> control_structures .)
    WHILE           reduce using rule 9 (statement -> control_structures .)
    BOOL            reduce using rule 9 (statement -> control_structures .)
    IF              reduce using rule 9 (statement -> control_structures .)
    FOR             reduce using rule 9 (statement -> control_structures .)
    $end            reduce using rule 9 (statement -> control_structures .)
    RBRACKET        reduce using rule 9 (statement -> control_structures .)


state 10

    (10) statement -> function .
